# package-compatibility-helper

./: .gitlab-ci.yml  CMakeLists.txt  Messages.sh  README.MD  REUSE.toml  org.filotimoproject.appcompatibilityhelper.desktop
LICENSES/: ISC.txt
src/: CMakeLists.txt  CompatibilityHelperFactory.cpp  CompatibilityHelperFactory.h  DebCompatibilityHelper.cpp  DebCompatibilityHelper.h  ICompatibilityHelper.cpp  ICompatibilityHelper.h  PackageUtils.cpp  PackageUtils.h  RpmCompatibilityHelper.cpp  RpmCompatibilityHelper.h  WindowsCompatibilityHelper.cpp  WindowsCompatibilityHelper.h  directories.h.in  main.cpp  org.kde.package-compatibility-helper.desktop
src/contents/ui/: Main.qml
